sample-apps/echo-server/echo-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: default
  labels:
    run: echo-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    run: echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: default
spec:
  selector:
    matchLabels:
      run: echo-server
  replicas: 3
  template:
    metadata:
      labels:
        run: echo-server
    spec:
      containers:
      - name: echo-server
        image: gcr.mirrors.ustc.edu.cn/google-containers/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /echo-server
        backend:
          serviceName: echo-server
          servicePort: 80
